fixed issue where navbar was covering some content

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 
+.body {
+    padding-top: 6.5rem;
+  }
+ 
 /*styling for navbar */
 .navbar {
     margin-bottom: 200px;
